--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "aws-sdk": "^2.734.0",
     "bluebird": "^3.7.2",
     "dataloader": "^1.4.0",
     "json-stable-stringify": "^1.0.1",
