--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,6 +10,7 @@ rules:
   no-use-before-define: 'off'
   '@typescript-eslint/no-empty-interface': 'off'
   '@typescript-eslint/explicit-function-return-type': 'off'
+  '@typescript-eslint/explicit-module-boundary-types': 'off'
   '@typescript-eslint/semi': error
   '@typescript-eslint/quotes':
     - error
